--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <BODY>
         <h1>This is a sample HTML file</h1>
         <br/>
+        <button>This is a button.</button>
     </BODY>
 </HTML>
