Add an image. Closes #2.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>This is a sample HTML file</h1>
         <br/>
         <button>This is a button.</button>
+        <img src="https://google.com/favicon.ico"/>
     </BODY>
 </HTML>
