Added footer. Closes #5.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <br/>
         <button>This is a button.</button>
         <img src="https://google.com/favicon.ico"/>
+        <div>Footer!</div>
     </BODY>
 </HTML>
